# ctunnel

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  LICENSE  Makefile  README.md  build-local.sh  configure  requirements-build.txt
.github/workflows/: ci.yml  cross-build.yml  nightly-soak.yml  release.yml  stress-smoke.yml
cmake/: VerifyLinkMode.cmake  static-link-probe.c
cmake/toolchains/: buildroot-arm.cmake.example  linux-aarch64.cmake  linux-armv5-gnueabi.cmake  linux-armv7.cmake  linux-i686.cmake  linux-mips.cmake  linux-mipsel.cmake  windows-mingw32.cmake  windows-mingw64.cmake
configs/: buildroot_defconfig  default_defconfig  full_defconfig  linux_defconfig  macos_defconfig  mini_client_defconfig  mini_defconfig  openwrt_mini_defconfig  windows_defconfig
configs/link/: dynamic.config  mostly-static.config  static.config
configs/role/: both.config  client.config  server.config
docs/: architecture.md  build-configuration.md  concurrency-and-lifecycle.md  config-symbols.md  configuration.md  cross-compilation.md  dependencies.md  embedded-builds.md  link-modes.md  protocol-security-properties.md  protocol.md  proxy-protocol.md  release.md  security-audit.md  security.md  size-report.md  threat-model.md  udp-security.md  udp.md
examples/: client-proxy-v2.ini  client-udp.ini  client.ini  clients.ini  server.ini
include/ctunnel/: crypto.h  version.h
packaging/buildroot/ctunnel/: Config.in  ctunnel.mk
packaging/openwrt/: Makefile
packaging/openwrt/files/: ctunnel.init
packaging/systemd/: ctunnel.service
scripts/: build-mini.sh  build.sh  check-binary-config.sh  check-dangerous-unicode.py  check-runtime-config.sh  config  cross-build.sh  fault-injection-test.sh  integration-test.sh  merge-config.sh  merge_config.py  package.sh  proxy-protocol-test.sh  size-compare.sh  size-report.sh  soak-test.sh  stress-test.sh  udp-stress-test.sh
scripts/kconfig/: VERSION  config_tool.py  configure.py  ctkconfig.py  menuconfig.py
shells/: README.md  ctunnel-ddns-resolve.sh  private-ddns-report.sh  worker.js
src/: Kconfig  ctunnel.h
src/app/: runtime.c  runtime.h
src/applets/: applets.h  build_info_applet.c  client_applet.c  common.c  configtest_applet.c  fingerprint_applet.c  keygen_applet.c  legacy.c  main.c  server_applet.c  version.c
src/client/: Kconfig  client.c
src/config/: Kconfig  config.c
src/crypto/: Kconfig  crypto_monocypher.c
src/log/: Kconfig
src/net/: Kconfig  net.c  net.h  proxy_protocol.c  proxy_protocol.h  relay.c  relay.h
src/platform/: Kconfig  event.h  event_epoll.c  event_kqueue.c  event_poll.c  platform.c  platform.h
src/protocol/: diagnostics.c  diagnostics.h  protocol.c  protocol.h
src/server/: Kconfig  server.c
src/tools/: Kconfig
src/util/: log.c  log.h  metrics.c  metrics.h  ring.c  ring.h
tests/config/: test_kconfig.py
tests/fuzz/: config_fuzz.c  data_record_fuzz.c  frame_fuzz.c  handshake_fuzz.c  key_file_fuzz.c  service_registration_fuzz.c
tests/load/: echo_server.py
tests/unit/: test_main.c
tests/vectors/: reference_vectors.py  v3.json
tools/: ctunnel-load.py  udp-load.py
